# pandoc-include-code

./: .gitignore  .travis.yml  AddLink.md  CHANGELOG.md  README.md  default.nix  pandoc-include-code.cabal  shell.nix  stack.yaml
filter/: Main.hs
src/: Main.hs
src/Text/Pandoc/Filter/: IncludeCode.hs  Range.hs
test/: Driver.hs  FilterTest.hs
test/fixtures/: foo-snippet.txt  foo-snippets.txt  indents.txt  nested-snippets.txt  some-text.txt
