name:          pandoc-include-code
synopsis:      A Pandoc filter for including code from source files
description:
  A Pandoc filter for including code from source files.
  It lets you keep your examples and documentation compiled and in sync,
  include small snippets from larger source files, and use Markdown or LaTeX
  together with preformatted HTML-like sources, in Pandoc.
author:        Oskar Wickström
maintainer:    Oskar Wickström
homepage:	     https://github.com/owickstrom/pandoc-include-code
version:       0.2.1
cabal-version: >= 1.8
build-type:    Simple
category:      Documentation
license:       MPL-2.0
license-file:  LICENSE

source-repository head
  type:     git
  location: git://github.com/owickstrom/pandoc-include-code.git

executable pandoc-include-code
    hs-source-dirs:  src
    main-is:         Main.hs
    build-depends:   base   >= 4      && < 5
                   , containers
                   , process
                   , filepath
                   , pcre-heavy
                   , pandoc-types
