name:                pandoc-include-code
synopsis:            A Pandoc filter for including code from source files
description:
  A Pandoc filter for including code from source files.
  It lets you keep your examples and documentation compiled and in sync,
  include small snippets from larger source files, and use Markdown or LaTeX
  together with preformatted HTML-like sources, in Pandoc.
author:              Oskar Wickström
maintainer:          Oskar Wickström
homepage:	     https://github.com/owickstrom/pandoc-include-code
version:             1.2.0.0
cabal-version:       >= 1.8
build-type:          Simple
category:            Documentation
license:             MPL-2.0
license-file:        LICENSE
extra-source-files:  CHANGELOG.md

source-repository head
  type:     git
  location: git://github.com/owickstrom/pandoc-include-code.git

library
    hs-source-dirs:  src
    exposed-modules: Text.Pandoc.Filter.IncludeCode
                     Text.Pandoc.Filter.Range
    build-depends:   base                 >= 4        && < 5
                   , unordered-containers >= 0.2      && < 0.3
                   , process
                   , filepath
                   , text                 >= 1.2      && < 1.3
                   , mtl                  >= 2.2      && < 3
                   , pandoc-types         >= 1.12     && <= 1.19


executable pandoc-include-code
    hs-source-dirs:  filter
    main-is:         Main.hs
    build-depends:   base                 >= 4        && < 5
                   , pandoc-types         >= 1.12     && <= 1.19
                   , pandoc-include-code

test-suite filter-tests
    type:            exitcode-stdio-1.0
    hs-source-dirs:  test
    main-is:         Driver.hs
    build-depends:   base                 >= 4        && < 5
                   , pandoc-types         >= 1.12     && <= 1.19
                   , pandoc-include-code
                   , tasty
                   , tasty-hunit
